--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -1,84 +1,73 @@
-    <div class="grid">
-        <div class="col-12 lg:col-6 xl:col-4">
-            <div class="card mb-0">
-                <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Vendas</span>
-                        <div class="text-900 font-medium text-xl">152</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                        <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
-                    </div>
+<div class="grid">
+    <div class="col-12 lg:col-6 xl:col-4">
+        <div class="card mb-0">
+            <div class="flex justify-content-between mb-3">
+                <div>
+                    <span class="block text-500 font-medium mb-3">Vendas Hoje</span>
+                    <div class="text-900 font-medium text-xl">R$500,00</div>
                 </div>
-                <span class="text-green-500 font-medium">24 new </span>
-                <span class="text-500">since last visit</span>
+                <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
+                    [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
+                    <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
+                </div>
             </div>
+            <span class="text-green-500 font-medium">34 novas </span>
         </div>
-        <div class="col-12 lg:col-6 xl:col-4">
-            <div class="card mb-0">
-                <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Vendas do Dia</span>
-                        <div class="text-900 font-medium text-xl">$2.100</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-orange-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                        <i class="pi pi-map-marker text-orange-500 text-xl"></i>
-                    </div>
+    </div>
+    <div class="col-12 lg:col-6 xl:col-4">
+        <div class="card mb-0">
+            <div class="flex justify-content-between mb-3">
+                <div>
+                    <span class="block text-500 font-medium mb-3">Vendas da Semana</span>
+                    <div class="text-900 font-medium text-xl">R$4.100,00</div>
                 </div>
-                <span class="text-green-500 font-medium">%52+ </span>
-                <span class="text-500">since last week</span>
+                <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
+                    [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
+                    <i class="pi pi-map-marker text-orange-500 text-xl"></i>
+                </div>
             </div>
+            <span class="text-green-500 font-medium">52%+ </span>
+            <span class="text-500">que semana passada</span>
         </div>
-        <div class="col-12 lg:col-6 xl:col-4">
-            <div class="card mb-0">
-                <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Customers</span>
-                        <div class="text-900 font-medium text-xl">28441</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-cyan-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                        <i class="pi pi-inbox text-cyan-500 text-xl"></i>
-                    </div>
+    </div>
+    <div class="col-12 lg:col-6 xl:col-4">
+        <div class="card mb-0">
+            <div class="flex justify-content-between mb-3">
+                <div>
+                    <span class="block text-500 font-medium mb-3">Vendas do Mês</span>
+                    <div class="text-900 font-medium text-xl">R$20.844,00</div>
                 </div>
-                <span class="text-green-500 font-medium">520  </span>
-                <span class="text-500">newly registered</span>
+                <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
+                    [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
+                    <i class="pi pi-inbox text-cyan-500 text-xl"></i>
+                </div>
             </div>
+            <span class="text-green-500 font-medium">520</span>
         </div>
-        <div class="col-12">
-            <div class="col-5" >
-                <div class="card">
-                    <h5>Ultimas Vendas</h5>
-                    <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th>Image</th>
-                                <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
-                                <th pSortableColumn="price">Price <p-sortIcon field="price"></p-sortIcon></th>
-                                <th>View</th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-product>
-                            <tr>
-                                <td style="width: 15%; min-width: 5rem;">
-                                    <img src="assets/demo/images/product/{{product.image}}" class="shadow-4" alt="{{product.name}}" width="50">
-                                </td>
-                                <td style="width: 35%; min-width: 7rem;">{{product.name}}</td>
-                                <td style="width: 35%; min-width: 8rem;">{{product.price | currency:'USD'}}</td>
-                                <td style="width: 15%;">
-                                    <button pButton pRipple type="button" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
-                                </td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                </div>
-            </div>
-            <div class="col-5" >
-                <div class="card">
-                    <h5>Sales Overview</h5>
-                    <p-chart type="line" [data]="chartData" [options]="chartOptions"></p-chart>
-                </div>
-            </div>
+    </div>
+    <div class="col-12 lg:col-6">
+        <div class="card">
+            <h5>Ultimas Vendas</h5>
+            <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
+                        <th pSortableColumn="price">Preço <p-sortIcon field="price"></p-sortIcon></th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-product>
+                    <tr>
+                        <td style="width: 35%; min-width: 7rem;">{{product.name}}</td>
+                        <td style="width: 35%; min-width: 8rem;">{{product.price | currency:'R$'}}</td>
+                    </tr>
+                </ng-template>
+            </p-table>
         </div>
-
+    </div>
+    <div class="col-12 lg:col-6">
+        <div class="card">
+            <h5>Visão geral de vendas</h5>
+            <p-chart type="line" [data]="chartData" [options]="chartOptions"></p-chart>
+        </div>
+    </div>
 </div>
-
