--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,6 +1,6 @@
 <div class="layout-topbar">
-    <a class="layout-topbar-logo" routerLink="">
-        <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="logo">
+    <a class="layout-topbar-logo" [routerLink]="'/dashboard'">
+        <img src="assets/layout/images/logo-dark.svg" alt="logo">
         <span>Pontual</span>
     </a>
 
