--- a/src/app/pages/produtos/produtosCadastro.component.html
+++ b/src/app/pages/produtos/produtosCadastro.component.html
@@ -23,11 +23,11 @@
                 [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
-                        <h5 class="m-0">Gerenciamento de Clientes</h5>
+                        <h5 class="m-0">Gerenciamento de Produtos</h5>
                         <span class="block mt-2 md:mt-0 p-input-icon-left">
                             <i class="pi pi-search"></i>
-                            <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Pesquisar..."
-                                class="w-full sm:w-auto" />
+                            <input pInputText type="text" (input)="onGlobalFilter(dt, $event)"
+                                placeholder="Pesquisar..." class="w-full sm:w-auto" />
                         </span>
                     </div>
                 </ng-template>
@@ -89,16 +89,15 @@
                             <span class="p-float-label">
                                 <input pInputText id="name" [(ngModel)]="product.name"
                                     [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}" />
-                                <label htmlFor="username">Nome</label>
+                                <label htmlFor="username">Código</label>
                             </span>
                             <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Campo
                                 Obrigatório.</small>
                         </div>
                         <div class="field col">
                             <span class="p-float-label">
-                                <input pInputText id="name" [(ngModel)]="product.name"
-                                    [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}" />
-                                <label htmlFor="username">Sobrenome</label>
+                                <p-inputNumber id="price" [(ngModel)]="product.price" mode="decimal" [minFractionDigits]="2" [maxFractionDigits]="2"></p-inputNumber>
+                                <label for="float-input">Valor de custo</label>
                             </span>
                             <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Campo
                                 Obrigatório.</small>
@@ -106,28 +105,18 @@
                     </div>
                     <div class="field" style="padding-top: 15px;">
                         <span class="p-float-label">
-                            <p-inputMask mask="999.999.999-99" [(ngModel)]="product.code" placeholder="(99) 99999-9999"></p-inputMask>
-                            <label htmlFor="username">CPF</label>
+                            <input pInputText id="name" [(ngModel)]="product.name"
+                                [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}" />
+                            <label htmlFor="username">Nome do produto</label>
                         </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Campo
+                            Obrigatório.</small>
                     </div>
-                    <div class="formgrid grid">
-                        <div class="field col" style="padding-top: 15px;">
-                            <span class="p-float-label">
-                                <p-inputMask mask="(99) 99999-9999" [(ngModel)]="product.description"
-                                    placeholder="(99) 99999-9999"
-                                    [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.description}"></p-inputMask>
-                                <label htmlFor="username">Celular</label>
-                            </span>
-                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
-                                Obrigatório.</small>
-                        </div>
-                        <div class="field col" style="padding-top: 15px;">
-                            <span class="p-float-label">
-                                <p-inputMask mask="(99) 99999-9999" [(ngModel)]="product.description"
-                                    placeholder="(99) 99999-9999"></p-inputMask>
-                                <label htmlFor="username">Fixo</label>
-                            </span>
-                        </div>
+                    <div class="field" style="padding-top: 15px;">
+                        <span class="p-float-label">
+                            <textarea id="description" pInputTextarea [(ngModel)]="product.description" required rows="3" cols="20"></textarea>
+                            <label for="float-input">Descrição</label>
+                        </span>
                     </div>
                 </ng-template>
 
