--- a/src/app/pages/produtos/produtosCadastro.component.html
+++ b/src/app/pages/produtos/produtosCadastro.component.html
@@ -38,10 +38,9 @@
                         </th>
                         <th pSortableColumn="code">Código <p-sortIcon field="code"></p-sortIcon></th>
                         <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="price">Contato <p-sortIcon field="price"></p-sortIcon></th>
-                        <th pSortableColumn="category">CPF<p-sortIcon field="category"></p-sortIcon></th>
-                        <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon>
-                        </th>
+                        <th pSortableColumn="price">Modelo <p-sortIcon field="price"></p-sortIcon></th>
+                        <th pSortableColumn="category">Valor de custo<p-sortIcon field="category"></p-sortIcon></th>
+                        <th pSortableColumn="category">Descrição<p-sortIcon field="category"></p-sortIcon></th>
                         <th></th>
                     </tr>
                 </ng-template>
@@ -50,24 +49,24 @@
                         <td>
                             <p-tableCheckbox [value]="product"></p-tableCheckbox>
                         </td>
-                        <td style="width:17%; min-width:10rem;"><span class="p-column-title">Code</span>
+                        <td style="width:17%; min-width:10rem;"><span class="p-column-title">Codigo</span>
                             {{product.code || product.id}}
                         </td>
                         <td style="width:20%; min-width:10rem;">
                             <span class="p-column-title">Name</span>
                             {{product.name}}
                         </td>
-                        <td style="width:17%; min-width:10rem;">
-                            <span class="p-column-title">Contato</span>
+                        <td style="width:20%; min-width:10rem;">
+                            <span class="p-column-title">Modelo</span>
                             {{product.name}}
                         </td>
-                        <td style="width:17%; min-width:10rem;">
-                            <span class="p-column-title">CPF</span>
+                        <td style="width:20%; min-width:10rem;">
+                            <span class="p-column-title">Valor de custo</span>
                             {{product.category}}
                         </td>
-                        <td style="width:17%; min-width: 10rem;"><span class="p-column-title">Status</span>
-                            <span
-                                [class]="'product-badge status-' + (product.inventoryStatus ? product.inventoryStatus.toLowerCase() : '')">{{product.inventoryStatus}}</span>
+                        <td style="width:20%; min-width:10rem;">
+                            <span class="p-column-title">Descricao</span>
+                            {{product.category}}
                         </td>
                         <td>
                             <div class="flex">
@@ -96,7 +95,8 @@
                         </div>
                         <div class="field col">
                             <span class="p-float-label">
-                                <p-inputNumber id="price" [(ngModel)]="product.price" mode="decimal" [minFractionDigits]="2" [maxFractionDigits]="2"></p-inputNumber>
+                                <p-inputNumber id="price" [(ngModel)]="product.price" mode="decimal" [minFractionDigits]="2" [maxFractionDigits]="2"
+                                [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}" ></p-inputNumber>
                                 <label for="float-input">Valor de custo</label>
                             </span>
                             <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Campo
