--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Vendas Hoje</span>
+                    <span class="block text-500 font-medium mb-3">Faturamento do dia</span>
                     <div class="text-900 font-medium text-xl">R$500,00</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
@@ -18,7 +18,7 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Vendas da Semana</span>
+                    <span class="block text-500 font-medium mb-3">Faturamento da semana</span>
                     <div class="text-900 font-medium text-xl">R$4.100,00</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
@@ -34,7 +34,7 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Vendas do Mês</span>
+                    <span class="block text-500 font-medium mb-3">Faturamento do mês</span>
                     <div class="text-900 font-medium text-xl">R$20.844,00</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
@@ -48,7 +48,7 @@
     <div class="col-12 lg:col-6">
         <div class="card">
             <h5>Ultimas Vendas</h5>
-            <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
+            <p-table [value]="products" [paginator]="true" [rows]="2" responsiveLayout="scroll">
                 <ng-template pTemplate="header">
                     <tr>
                         <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
