--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,7 +1,6 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" [routerLink]="'/dashboard'">
-        <img src="assets/layout/images/logo-dark.svg" alt="logo">
-        <span>Pontual</span>
+        <img src="assets/layout/images/pontual-logo.png"  style="height: 70px; width: 183px; margin-top: 9px; margin-left: 5px;">
     </a>
 
     <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
