--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -1,17 +1,18 @@
 <div class="grid">
+    <p-toast></p-toast>
     <div class="col-12 lg:col-6 xl:col-4">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Faturamento do dia</span>
-                    <div class="text-900 font-medium text-xl">R$500,00</div>
+                    <div class="text-green-500 font-medium text-xl">R$500,15</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
+                    <i class="pi pi-chart-bar text-blue-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">34 novas </span>
+            <span class="text-500 font-medium">05/06/2023</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-4">
@@ -19,15 +20,14 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Faturamento da semana</span>
-                    <div class="text-900 font-medium text-xl">R$4.100,00</div>
+                    <div class="text-green-500 font-medium text-xl">R$4.100,95</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-map-marker text-orange-500 text-xl"></i>
+                    <i class="pi pi-chart-line text-orange-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">52%+ </span>
-            <span class="text-500">que semana passada</span>
+            <span class="text-500">05/06/2023 à 09/06/2023</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-4">
@@ -35,20 +35,20 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Faturamento do mês</span>
-                    <div class="text-900 font-medium text-xl">R$20.844,00</div>
+                    <div class="text-green-500 font-medium text-xl">R$20.844,39</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-inbox text-cyan-500 text-xl"></i>
+                    <i class="pi pi-chart-bar text-blue-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">520</span>
+            <span class="text-500 font-medium">01/06/2023 à 30/06/2023</span>
         </div>
     </div>
     <div class="col-12 lg:col-6">
         <div class="card">
             <h5>Ultimas Vendas</h5>
-            <p-table [value]="products" [paginator]="true" [rows]="2" responsiveLayout="scroll">
+            <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                 <ng-template pTemplate="header">
                     <tr>
                         <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
