--- a/src/app/pages/clientes/clientesCadastro.component.html
+++ b/src/app/pages/clientes/clientesCadastro.component.html
@@ -91,7 +91,7 @@
                                     [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}" />
                                 <label htmlFor="username">Nome</label>
                             </span>
-                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Campo Obrigatório.</small>
+                            <small class="ng-invalid ng-dirty" *ngIf="submitted && !product.name">Campo Obrigatório.</small>
                         </div>
                         <div class="field col">
                             <span class="p-float-label">
@@ -99,7 +99,7 @@
                                     [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}" />
                                 <label htmlFor="username">Sobrenome</label>
                             </span>
-                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Campo
+                            <small class="ng-invalid ng-dirty" *ngIf="submitted && !product.name">Campo
                                 Obrigatório.</small>
                         </div>
                     </div>
